# HOMMEXX

./: .clang-format  CMakeLists.txt  dictionary.txt  run_gpu_comparison.sh
cmake/: CprncCxxVsF90.cmake.in  (+4 more)
components/homme/: CMakeLists.txt
components/homme/cmake/: CprncCxxVsF90.cmake.in  FindAVX.cmake  HommeMacros.cmake  SetCompilerFlags.cmake  Trilinos.cmake
components/homme/cmake/machineFiles/: RIDE.cmake  blake.cmake  bowman.cmake  cori-knl-homme.cmake  cori-knl-serial.cmake  cori-knl.cmake  edison-serial.cmake  ellis.cmake  shepard.cmake  skybridge-kokkos.cmake  skybridge.cmake  white-og.cmake  white.cmake
components/homme/dashboards/: cronjob
components/homme/dashboards/bowman.sandia.gov/: CTestConfig.cmake  Project.xml  bowman_modules.sh  cronjob  cronjob_bowman  cronjob_software-login  ctest_nightly.cmake.frag  ellis_modules.sh  ellis_openmp_env.sh  hommexxOpenMP  nightly_cron_script_hommexx_bowman_openmp.sh  process_results_ctest_openmp.sh  run_all_openmp.batch  send_email_ctest_openmp.sh  send_email_ctest_openmp_irina.sh
components/homme/dashboards/ride.sandia.gov/: Project.xml  RUNME  apply_kokkos_patch.sh  build_kokkos.sh  cronjob  cronjob_hack.batch  ctest_nightly.cmake.frag  jenkins_job  nightly_cron_script_hommexx_ride_cuda.sh  nightly_cron_script_trilinos_ride_cuda.sh  process_results_ctest_cuda.sh  ride_modules_cuda.sh  run_all_lsf.batch  run_all_lsf.sh  send_email_ctest_cuda.sh
components/homme/dashboards/skybridge.sandia.gov/: build_kokkos_openmp.sh  cronjob  cronjob_mockba  cronjob_skybridge  ctest_nightly.cmake.frag  hommexxOpenMP  hommexxOpenMP.batch  hommexxSerial  hommexxSerial.batch  modules_hommexx.out  nightly_cron_script_hommexx_skybridge_openmp.sh  nightly_cron_script_hommexx_skybridge_serial.sh  nightly_cron_script_trilinos_checkout.sh  nightly_cron_script_trilinos_skybridge_openmp.sh  nightly_cron_script_trilinos_skybridge_serial.sh  process_results_ctest_openmp.sh  process_results_ctest_serial.sh  run_all_openmp.batch  run_all_serial.batch  send_email_ctest_openmp.sh  send_email_ctest_openmp_irina.sh  send_email_ctest_serial.sh  send_email_ctest_serial_irina.sh  skybridge_modules_gcc.sh  skybridge_openmp_env.sh  submit_script.sh  trilinosCheckout  trilinosSerial
components/homme/physics/heldsuarez/: held_suarez_mod.F90
components/homme/sc18-results/knl-serial/: commits-for-march08-march09-runs
components/homme/sc18-results/prelim-scripts/: warning
components/homme/src/: Hommexx_config.h.in  fortran_binding.hpp  interp_movie_mod.F90  prim_main.F90  prim_restart_mod.F90  test_mod.F90  utils_mod.F90
components/homme/src/kokkos_kernels/: AdvanceRK.cpp  AdvanceRK.hpp  SphericalOperators.cpp  SphericalOperators.hpp  Types.hpp  recover_q.cpp  team_parallel.cpp
components/homme/src/preqx/: CMakeLists.txt  derivative_mod.F90
components/homme/src/preqx_acc/: CMakeLists.txt
components/homme/src/preqx_flat/: CMakeLists.txt  config.h.cmake.in
components/homme/src/prim/: CMakeLists.txt
components/homme/src/share/: ControlParameters.cpp  ControlParameters.hpp  Derivative.cpp  Derivative.hpp  PhysicalConstants.cpp  PhysicalConstants.hpp  PointersPool.cpp  PointersPool.hpp  ViewsPool.cpp  ViewsPool.hpp  caar_pre_exchange_driver_mod.F90  caar_subroutines_mod.F90  caar_subroutines_orig_mod.F90  coordinate_systems.hpp  derivative_mod_base.F90  dimensions.hpp  dimensions_mod.F90  element_mod.F90  filter_mod.F90  kinds.hpp  kokkos_init.cpp  omp_config.h  parallel_mod.F90  prim_advance_caar_mod.F90  prim_advance_exp_mod.F90  prim_advance_hypervis_mod.F90  prim_advance_mod.F90  prim_advection_mod_base.F90  prim_cxx_driver_mod.F90  prim_driver_mod.F90  prim_implicit_mod.F90  prim_si_mod.F90  prim_state_mod.F90  time_mod.F90  vertremap_mod_base.F90  viscosity_mod_base.F90
components/homme/src/sweqx/: CMakeLists.txt  advance_mod.F90  shallow_water_mod.F90
components/homme/src/sweqx_flat/: CMakeLists.txt  advance_mod.F90  config.h.cmake.in  init_mod.F90  main.F90  shallow_water_mod.F90  sweq_mod.F90
components/homme/src/test_src/: asp_tests.F90  baroclinic_inst_mod.F90
components/homme/test/unit_tests/: CMakeLists.txt  KokkosCore_config.h  tester.cpp
components/homme/test_execs/: CMakeLists.txt
components/homme/test_execs/baroCam/: CMakeLists.txt
components/homme/test_execs/baroCam-acc/: CMakeLists.txt
components/homme/test_execs/preqx-nlev30-interp/: CMakeLists.txt
components/homme/test_execs/preqx-nlev60-interp/: CMakeLists.txt
components/homme/test_execs/preqx-nlev60-native/: CMakeLists.txt
components/homme/test_execs/preqx_flat_ut/: CMakeLists.txt
components/homme/test_execs/preqx_ut/: CMakeLists.txt
components/homme/test_execs/primA/: CMakeLists.txt
components/homme/test_execs/prtcA/: CMakeLists.txt  namelist.nl
components/homme/test_execs/prtcA_c/: CMakeLists.txt
components/homme/test_execs/prtcA_flat/: CMakeLists.txt
components/homme/test_execs/prtcA_flat_c/: CMakeLists.txt
components/homme/test_execs/prtcB/: CMakeLists.txt
components/homme/test_execs/prtcB_c/: CMakeLists.txt
components/homme/test_execs/prtcB_flat/: CMakeLists.txt  namelist.nl
components/homme/test_execs/prtcB_flat_c/: CMakeLists.txt  namelist.nl
components/homme/test_execs/share_ut/: CMakeLists.txt  boundary_exchange_ut.F90  boundary_exchange_ut.cpp  hyperviscosity_functor_ut.F90  hyperviscosity_functor_ut.cpp  infrastructure_ut.cpp  random_init_ut.cpp  share_ut.F90  share_ut.cpp  sphere_operators_ut.cpp
components/homme/test_execs/sweqx_flat_ut/: CMakeLists.txt
components/homme/test_execs/sweqx_ut/: CMakeLists.txt
components/homme/test_execs/swtcA/: CMakeLists.txt
components/homme/test_execs/swtcA_c/: CMakeLists.txt
components/homme/test_execs/swtcA_flat/: CMakeLists.txt
components/homme/test_execs/swtcA_flat_c/: CMakeLists.txt
components/homme/test_execs/swtcB/: CMakeLists.txt
components/homme/test_execs/swtcB_c/: CMakeLists.txt
components/homme/test_execs/swtcB_flat/: CMakeLists.txt
test/unit_tests/: CMakeLists.txt  tester.cpp
test/unit_tests/inputs/: divergence_sphere_np4.in  vorticity_sphere_np8.in
(+1750 files in other folders)
