
SET(UNITTESTER_DIR ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp" PARENT_SCOPE)

ENABLE_LANGUAGE(CXX)

INCLUDE(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG(-parallel CXX_PARALLEL_FLAG)

IF(${CXX_PARALLEL_FLAG})
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -parallel" PARENT_SCOPE)
ENDIF()

macro(cxx_unit_test targetname useomp usecuda targetsrcs)

ENABLE_LANGUAGE(CXX)

ADD_EXECUTABLE(${targetname} ${UNITTESTER_DIR}/tester.cpp ${targetsrcs})
TARGET_LINK_LIBRARIES(${targetname} dl pthread rt kokkoscore pio timing ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})
ADD_TEST(${targetname}_test ${targetname})

TARGET_INCLUDE_DIRECTORIES(${targetname} PUBLIC "${UNITTESTER_DIR}")
TARGET_INCLUDE_DIRECTORIES(${targetname} PUBLIC "${TRILINOS_INSTALL_DIR}/include")

IF(${useomp})
  TARGET_COMPILE_OPTIONS(${targetname} PUBLIC -DKOKKOS_HAVE_OPENMP=1)
  TARGET_INCLUDE_DIRECTORIES(${targetname} PUBLIC "${TRILINOS_INSTALL_DIR}/include/OpenMP")
ENDIF()

IF(${usecuda})
  TARGET_COMPILE_OPTIONS(${targetname} PUBLIC -DKOKKOS_HAVE_CUDA=1)
  TARGET_INCLUDE_DIRECTORIES(${targetname} PUBLIC "${TRILINOS_INSTALL_DIR}/include/Cuda")
ENDIF()

endmacro(cxx_unit_test)
